0.7:
* Configuration: Format changed to use classes to simplify changing configurations
* Configuration: Default database name changed from flaskr.db to filedb.db (rename your old database file when upgrading)
* Documentation: README, INSTALL and API documentation is now available from the help page
* API: /api/thumbnail added.

0.6:
* Added this changelog
* Webapp: Added posibility to list directories from within the configured root directory
* Webapp: Added some alert messages for when form input is missing
* API: /api/files now matches all search categories
* API: /api/fs_directories added
* API: /api/directories added
* Added Ant build script to simplify making new releases