@@ -13,13 +13,14 @@
 
         <zip destfile="${zipfile}" basedir="${builddir}" excludes="**">
             <zipfileset file="*.py" prefix="${zipprefix}"/>
-            <zipfileset file="schema.sql" prefix="${zipprefix}"/>
+            <zipfileset file="filedb.sql" prefix="${zipprefix}"/>
             <zipfileset file="CHANGES.txt" prefix="${zipprefix}"/>
             <zipfileset file="README.html" prefix="${zipprefix}"/>
             <zipfileset file="API.html" prefix="${zipprefix}"/>
             <zipfileset file="static/*" prefix="${zipprefix}/static"/>
             <zipfileset file="templates/*.html" prefix="${zipprefix}/templates"/>
             <zipfileset file="utils/*" prefix="${zipprefix}/utils"/>
+            <zipfileset file="files/" prefix="${zipprefix}"/>
         </zip>
     </target>
 
